input box shadow

--- a/pages/home.html
+++ b/pages/home.html
@@ -18,21 +18,23 @@
 <body>
   <header class="pt-5">
     <section class="container">
-      <h1>Lista de la Compra</h1>
+      <h1 class="mb-3">Lista de la Compra</h1>
     </section>
   </header>
   <main>
     <section class="container">
       <article class="row">
-        <div class="col">
+        <div class="col mb-2">
           <h6>Escribe el item para agregar en tu lista de la compra</h6>
         </div>
       </article>
       <article class="row">
         <div class="col-10">
           <div class="d-flex">
-            <input id="product" class="form-control me-2" type="text" placeholder="Escribe item">
-            <button id="addItemToList" class="btn btn-primary" onclick="addToList()">+</button>
+            <input id="product" class="form-control me-2" type="text" placeholder="ej. Comprar leche">
+            <button id="addItemToList" class="btn btn-primary" onclick="addToList()">
+                +
+            </button>
           </div>
         </div>
         <div class="col-2">
